--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,14 @@
   "main": "server.js",
   "scripts": {
     "test": "jest --coverage",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^0.0.0",
+    "express": "^4.19.2",
     "openai": "^4.52.7"
   }
 }
